1.1.6-git
- Better handling of errors when connecting to servers
- Fixed API problems with calculating queue item start
- Changed settings UI